Reformat code to use 4 space indents